objects/SkuidPageHistory__c.object
<CustomObject>
    <fields>
        <fullName>LastVisitedDate__c</fullName>
        <label>LastVisitedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <description>This is skuid Page name</description>
        <label>PageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>ProfileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SkuidPageHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitCount__c</fullName>
        <label>VisitCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>